Fix tooltip overflow

--- a/packages/scss/src/components/tooltip/component.scss
+++ b/packages/scss/src/components/tooltip/component.scss
@@ -17,6 +17,7 @@
 	animation-duration: var(--commons-animations-durations-fast);
 	animation-iteration-count: 1;
 	hyphens: auto;
+	word-break: break-word;
 
 	@include keyframe.scaleIn;
 
